no todo: asdf#show cdp neigh | hinclude sdn  is fine but once the encUtf6/7 is there
no todo: sendtrhrough mode in p4lang to the dataplanes when crypto turned on like wg ovpn and ipsec if possible
no todo: mist natives to have ipcomp rfc somehow dissect this: packages.debian.org/sid/gzip so libc and deflate to link to
no todo: mpls as ipv8 as december project to the guessEthtype and maybe to the dataplanes (dont think so)
no todo: honeypot to wireformat, decode
---------------------------------- 2023-12-05 11:47:25 23.12.5
no todo: player queue up down add-again
---------------------------------- 2023-12-05 17:28:16 23.12.5
no todo: serevr security maximum pendings as access-security
no todo: test access-list <acl> <src> <trg>
todo: server security maximum pendings as access-security
---------------------------------- 2023-12-07 09:29:03 23.12.7
no todo: server dhcp4 sdnXXX ---> server dhcp4 sdnXXX  inetXXX sdnZZZ as upgrade-cli <---maybe duplicate? :)
---------------------------------- 2023-12-07 17:30:54 23.12.7
no todo: server * vrf <tabbable> and upgrade-cli
no todo: same for upgrade-cli  <!-----------------------------------------------------------------------
no todo: upgrade-all-the-clis config knobs.... like server asdfadsf vrf asdf int sdn1111
---------------------------------- 2023-12-08 08:53:55 23.12.8
qc pass: dhcp with upgraded server
failed: dhcp with interface server
---------------------------------- 2023-12-10 10:00:35 23.12.10
no failed: dhcp with interface server
qc pass: dhcp with interface server
qc pass: unicast+mtree over bgp
qc pass: unicast+mtree over bgp with soft-reconfig
qc pass: unicast+mtree over bgp with additional path
qc pass: unicast+othermtree over bgp
qc pass: unicast+othermtree over bgp with soft-reconfig
qc pass: unicast+othermtree over bgp with additional path
---------------------------------- 2023-12-11 21:28:01 23.12.11
no todo: game butterfly hanoy, modem, mdev