@@ -1,4 +1,4 @@
-description p4lang: packout on vlan port
+description p4lang: packout on macsec vlan port
 
 addrouter r1
 int eth1 eth 0000.0000.1111 $1a$ $1b$
@@ -35,10 +35,17 @@ int lo0
  ipv4 addr 2.2.2.101 255.255.255.255
  ipv6 addr 4321::101 ffff:ffff:ffff:ffff:ffff:ffff:ffff:ffff
  exit
+crypto ipsec ips
+ group 02
+ cipher des
+ hash md5
+ key tester
+ exit
 int sdn1
  no autostat
  exit
 int sdn1.111
+ macsec ips
  vrf for v1
  ipv4 addr 1.1.1.1 255.255.255.0
  ipv6 addr 1234:1::1 ffff:ffff::
@@ -85,7 +92,7 @@ ipv6 route v1 4321::105 ffff:ffff:ffff:ffff:ffff:ffff:ffff:ffff 1234:3::2
 ipv6 route v1 4321::106 ffff:ffff:ffff:ffff:ffff:ffff:ffff:ffff 1234:4::2
 !
 
-addother r2 controller r1 v9 9080 - feature pckout vlan route
+addother r2 controller r1 v9 9080 - feature pckout macsec vlan route
 int eth1 eth 0000.0000.2222 $1b$ $1a$
 int eth2 eth 0000.0000.2222 $2a$ $2b$
 int eth3 eth 0000.0000.2222 $3a$ $3b$
@@ -113,7 +120,14 @@ bridge 1
 int eth1.111
  bridge-gr 1
  exit
+crypto ipsec ips
+ group 02
+ cipher des
+ hash md5
+ key tester
+ exit
 int bvi1
+ macsec ips
  vrf for v1
  ipv4 addr 1.1.1.2 255.255.255.0
  ipv6 addr 1234:1::2 ffff:ffff::
