@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter-rare v23.12.31-cur, done by sprscc13@mr.n0b0dy.
--;-;-;2023-12-31 08:05:21, took 00:11:46, with 80 workers, on 3408 cases, 0 failed, 0 traces, 11 retries
+-;-;-;2023-12-31 08:57:45, took 00:11:55, with 80 workers, on 3410 cases, 0 failed, 0 traces, 16 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -1625,6 +1625,8 @@ http://sources.freertr.org/cfg/p4lang-crypt111.tst;p4lang-crypt111.tst;success;p
 http://sources.freertr.org/cfg/p4lang-crypt112.tst;p4lang-crypt112.tst;success;p4lang: sgt over tmux
 http://sources.freertr.org/cfg/p4lang-packo01.tst;p4lang-packo01.tst;success;p4lang: packout on port
 http://sources.freertr.org/cfg/p4lang-packo02.tst;p4lang-packo02.tst;success;p4lang: packout on vlan port
+http://sources.freertr.org/cfg/p4lang-packo03.tst;p4lang-packo03.tst;success;p4lang: packout on macsec port
+http://sources.freertr.org/cfg/p4lang-packo04.tst;p4lang-packo04.tst;success;p4lang: packout on macsec vlan port
 http://sources.freertr.org/cfg/p4lang-rout001.tst;p4lang-rout001.tst;success;p4lang: routing
 http://sources.freertr.org/cfg/p4lang-rout002.tst;p4lang-rout002.tst;success;p4lang: bridging
 http://sources.freertr.org/cfg/p4lang-rout003.tst;p4lang-rout003.tst;success;p4lang: mpls core
