@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter-rare v23.12.31-cur, done by sprscc13@mr.n0b0dy.
--;-;-;2023-12-31 08:15:19, took 00:09:41, with 60 workers, on 528 cases, 0 failed, 0 traces, 0 retries
+-;-;-;2023-12-31 09:06:30, took 00:08:28, with 60 workers, on 530 cases, 0 failed, 0 traces, 3 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
@@ -214,6 +214,8 @@ http://sources.freertr.org/cfg/p4lang-crypt111.tst;p4lang-crypt111.tst;success;p
 http://sources.freertr.org/cfg/p4lang-crypt112.tst;p4lang-crypt112.tst;success;p4lang: sgt over tmux
 http://sources.freertr.org/cfg/p4lang-packo01.tst;p4lang-packo01.tst;success;p4lang: packout on port
 http://sources.freertr.org/cfg/p4lang-packo02.tst;p4lang-packo02.tst;success;p4lang: packout on vlan port
+http://sources.freertr.org/cfg/p4lang-packo03.tst;p4lang-packo03.tst;success;p4lang: packout on macsec port
+http://sources.freertr.org/cfg/p4lang-packo04.tst;p4lang-packo04.tst;success;p4lang: packout on macsec vlan port
 http://sources.freertr.org/cfg/p4lang-rout001.tst;p4lang-rout001.tst;success;p4lang: routing
 http://sources.freertr.org/cfg/p4lang-rout002.tst;p4lang-rout002.tst;success;p4lang: bridging
 http://sources.freertr.org/cfg/p4lang-rout003.tst;p4lang-rout003.tst;success;p4lang: mpls core
