@@ -210,6 +210,8 @@ qc pass: p4lang: macsec over tmux
 qc pass: p4lang: sgt over tmux
 qc pass: p4lang: packout on port
 qc pass: p4lang: packout on vlan port
+qc pass: p4lang: packout on macsec port
+qc pass: p4lang: packout on macsec vlan port
 qc pass: p4lang: routing
 qc pass: p4lang: bridging
 qc pass: p4lang: mpls core
@@ -535,7 +537,6 @@ todo: flash ext-delete also to commander
 todo: commander to get away the cursor
 todo: openflow to have 2 label support and stack to p4lang
 todo: bridge and router have renumber knob
-todo: misc natives p4fwd to have more tests 4 packetout message with macsec/wg/ipsec/ovpn/etc too...
 todo: mist natives p4fwd to report the boot messages through the control channel in dataplane-says
 todo: mist natives p4fwd to report all the error messages in the control channel in dataplane-says
 todo: a preface forwarder for the asic offload to have at crypto and frag/reasm using misc/natives
