@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter-rare v23.12.31-cur, done by sprscc13@mr.n0b0dy.<br/>
-tested: 2023-12-31 08:15:19, took 00:09:41, with 60 workers, on 528 cases, 0 failed, 0 traces, 0 retries<br/>
+tested: 2023-12-31 09:06:30, took 00:08:28, with 60 workers, on 530 cases, 0 failed, 0 traces, 3 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -231,6 +231,8 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-crypt112.tst">p4lang-crypt112.tst</a></td><td>success</td><td>p4lang: sgt over tmux</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-packo01.tst">p4lang-packo01.tst</a></td><td>success</td><td>p4lang: packout on port</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-packo02.tst">p4lang-packo02.tst</a></td><td>success</td><td>p4lang: packout on vlan port</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-packo03.tst">p4lang-packo03.tst</a></td><td>success</td><td>p4lang: packout on macsec port</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-packo04.tst">p4lang-packo04.tst</a></td><td>success</td><td>p4lang: packout on macsec vlan port</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout001.tst">p4lang-rout001.tst</a></td><td>success</td><td>p4lang: routing</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout002.tst">p4lang-rout002.tst</a></td><td>success</td><td>p4lang: bridging</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout003.tst">p4lang-rout003.tst</a></td><td>success</td><td>p4lang: mpls core</td></tr>
