@@ -23,8 +23,6 @@ openflow to have 2 label support and stack to p4lang
 bridge and router have renumber knob
 
 
-misc natives p4fwd to have more tests 4 packetout message with macsec/wg/ipsec/ovpn/etc too...
-
 mist natives p4fwd to report the boot messages through the control channel in dataplane-says
 
 mist natives p4fwd to report all the error messages in the control channel in dataplane-says
